--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bekodani.github.io/rest-countries-api-with-color-theme-switcher",
+  "homepage": "http://bekodani.github.io/rest-countries",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
